[package]
name = "rtree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
clap = { version = "4.1.1", features = ["derive"] }
colored = "2.0.4"
thiserror = "1.0.49"

